all online functionality completed, starting backgroundSync and offline functionality on adding reviews

--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -81,7 +81,7 @@
             <table id="restaurant-hours"></table>
           </div>
           <hr />
-        </div>
+        </div> 
 
         <div class="side-right"></div>
       </section>
@@ -141,7 +141,7 @@
                       <div class="form-group-textarea">   
                         <textarea id="commentsInput" required class="comments-textarea" name="comments" cols="40" rows="10"></textarea>
                         <span class="bar"></span>
-                        <label  for="name">Tell us your thoughts..</label>
+                        <label for="comments">Tell us your thoughts..</label>
                       </div>
                       <div></div>
                     </div>
