background-sync completed with adding reviews, UI now updating without refresh, background-sync for favorite/unfavorite and performance/accessibility fixes to go

--- a/src/restaurant.html
+++ b/src/restaurant.html
@@ -115,7 +115,7 @@
                         <div class="form-group">   
                             <input id="nameInput" name="name" type="text" required>
                             <span class="bar"></span>
-                            <label  for="name">Name</label>
+                            <label  for="name">First Name</label>
                           </div>
                           <div class="rating-select" data-rating="0">
                             <span>
