--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="theme-color" content="#252831" />
+    <meta
+      name="Description"
+      content="Review your favorite restaurant in New York, on or offline"
+    />
     <link
       rel="stylesheet"
       src="//normalize-css.googlecode.com/svn/trunk/normalize.css"
@@ -93,6 +97,7 @@
       charset="utf-8"
       src="js/sw/indexController.js"
     ></script>
+
     <!--
       <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script>
     -->
